--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,10 +14,23 @@
             <nav>
                 <a href="/">Home</a>
                 <div>
-                    <a href="/new_gamestop">New Gamestop</a>
-                    <a href="/new_game">New Game</a>
+                    {% if current_user.is_authenticated %}
+                        <!-- stuff you only want to show to logged-in users -->
+                        <!-- stuff you only want to show to logged-out users -->
+                        <a href="/new_gamestop">New Gamestop</a>
+                        <a href="/new_game">New Game</a>
+                        <a href="/logout">Logout</a>
+                    {% else %}
+                        <a href="/login">Login</a>
+                        <a href="/signup">Signup</a>
+                    {% endif %}
+                    
+                    
                 </div>
             </nav>
+            {% if current_user.is_authenticated %}
+            <p>You are logged in as {{ current_user.username }}</p>
+            {% endif %}
             {% block content %}{% endblock %}
         </div>
     </body>
